Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-1985

QIMAGE_SANITYCHECK_MEMORY is missing in some methods

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.7.0
    • 4.4.0
    • Image formats
    • None
    • a041e4eca3467c1baa6245b6fb47def127f30f41

    Description

      In many of the functions in QImage where a new QImage is created,
      QIMAGE_SANITYCHECK_MEMORY(image) is called afterwards to check if it is a null image.

      In
      QImage QImage::rgbSwapped() and QImage::mirrored()
      QIMAGE_SANITYCHECK_MEMORY()
      is not called after a new QImage is created.

      When some functions return a null image, for example when there is not enough memory to create the image it is easy to get an exception or a crash.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rodal Samuel Rødal
            admin Administrator
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes